k8s/01-namespace-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
